@@ -72,6 +72,7 @@ constexpr char const* UNDERSCORE = "_";
 constexpr char const* UPDATE_COLLECTION = "UpdateCollection";
 constexpr char const* WAIT_FOR_SYNC = "waitForSync";
 constexpr char const* OLD_CURRENT_COUNTER = "oldCurrentCounter";
+constexpr char const* LEADER_NOT_YET_KNOWN = "NOT_YET_TOUCHED";
 
 }  // namespace maintenance
 }  // namespace arangodb
