@@ -1,6 +1,9 @@
 v3.5.6 (XXXX-XX-XX)
 -------------------
 
+* Fixed bug during startup for follower shards. Follower will be set correctly
+  resulting in less resynchronization.
+
 * Update OpenLDAP to 2.4.50.
 
 * Fix edge cases in RocksDB primary index range lookups for operators >= and <.
